fix Product Cards disappearing after being loaded due to missing input values, fix gap between rows of keyboard products by settings align-content to flex-start, remove unessecary container div for Product Cards and now will only show if data has been fetched successfully otherwise show loading spinner

--- a/client/src/styles/data-control-center-styles.module.css
+++ b/client/src/styles/data-control-center-styles.module.css
@@ -14,6 +14,7 @@
 
 .dataControlCenterContainer ::placeholder, option, input, select, label, button {
 	font-family: "poppins", sans-serif;  
+	font-size: 12px;
 }
 
 .inputContainer {
