--- a/client/src/styles/keyboards-styles.module.css
+++ b/client/src/styles/keyboards-styles.module.css
@@ -28,21 +28,14 @@
 	align-items: center;
 	gap: 10px;
 	margin-bottom: 20rem;
+	width: 100%;
 }
 
-.productListContainer {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-width: 3rem;
-	flex: 10;
-	/* border: 2px solid black; */
-}
 
 .productList {
 	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	justify-content: flex-start;
+	align-content: flex-start;
 	flex-direction: row;
 	flex-wrap: wrap;
 	animation: fade-in 2s ease;
